--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.4.5",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2",
+    "mongoose": "^8.5.3",
     "monitor": "^0.6.10",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
