--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.3",
     "monitor": "^0.6.10",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -36,6 +35,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.0",
+    "mongoose": "^8.5.4",
     "nodemon": "2.0.15",
     "supertest": "^7.0.0"
   }
